--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
                     </ul>
                     <div class="legal">
                         &copy; 2020 by Trillo. All Rights Reserved.
+                        <a href="https://www.exstyler.com/" class="side-nav__link">Exstyler</a>
+                        
                     </div>
                 </nav>
                 <!--Hotel view part-->
