--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     </ul>
                     <div class="legal">
                         &copy; 2020 by Trillo. All Rights Reserved.
-                        <a href="https://www.exstyler.com/" class="side-nav__link">Exstyler</a>
+                        <a href="https://www.exstyler.com/" target="_blank" class="side-nav__link">Exstyler</a>
                         
                     </div>
                 </nav>
